--- a/.github/workflows/main_pr2.yml
+++ b/.github/workflows/main_pr2.yml
@@ -2,15 +2,15 @@ name: CI PR2 standalone
 defaults:
   run:
     shell: bash -ieo pipefail {0}
-on:
-  push:
-    branches:
-      - master
-      - devel
-  pull_request:
-    branches:
-      - master
-      - devel
+# on:
+#   push:
+#     branches:
+#       - master
+#       - devel
+#   pull_request:
+#     branches:
+#       - master
+#       - devel
   workflow_dispatch:
     inputs:
       logLevel:
