--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,6 +30,9 @@ jobs:
   build:
     runs-on: ubuntu-20.04
     steps:
+    - name: touch1
+      run: |
+        echo 'asdf' > hi.txt
     - name: cache test
       id: muh
       uses: actions/cache@v3
@@ -41,6 +44,7 @@ jobs:
       name: List the state of node modules
       continue-on-error: true
       run: |
+        echo "cache miss"
         date > hi.txt
     - name: touch
       run: |
