--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,29 +30,29 @@ jobs:
   build:
     runs-on: ubuntu-20.04
     steps:
-    - name: load muh
+    - name: load qpalm
       id: muh-load
       uses: actions/cache@v3
       with:
         path: |
-          ~/hi.txt
+          ~/.cache/pip
         key: muh
     - if: ${{ steps.muh-load.outputs.cache-hit != 'true' }}
-      name: create hi.txt
+      name: install qpalm
       continue-on-error: true
       run: |
         echo "cache miss"
-        date > ~/hi.txt
+        sudo pip3 install qpalm
     - name: cache muh
       id: muh-save
       uses: actions/cache/save@v3
       with:
         path: |
-          ~/hi.txt
+          ~/.cache/pip
         key: muh
     - name: touch
       run: |
-        cat ~/hi.txt
+        pip3 freeze | grep qpalm
         
 #    - name: Setup upterm session
 ##      if: always()
