--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -42,7 +42,7 @@ jobs:
       continue-on-error: true
       run: |
         echo "cache miss"
-        sudo pip3 install casadi
+        pip3 install casadi
     - name: cache muh
       id: muh-save
       uses: actions/cache/save@v3
@@ -54,7 +54,7 @@ jobs:
       run: |
         pip3 freeze | grep casadi
         
-    - name: Setup upterm session
+#     - name: Setup upterm session
 #      if: always()
 #       if: failure()
-      uses: lhotari/action-upterm@v1
+#       uses: lhotari/action-upterm@v1
