--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,14 +3,6 @@ defaults:
   run:
     shell: bash -ieo pipefail {0}
 on:
-#   push:
-#     branches:
-#       - master
-#       - devel
-#   pull_request:
-#     branches:
-#       - master
-#       - devel
   workflow_dispatch:
     inputs:
       logLevel:
@@ -54,7 +46,7 @@ jobs:
       run: |
         pip3 freeze | grep casadi
         
-#     - name: Setup upterm session
+    - name: Setup upterm session
 #      if: always()
 #       if: failure()
-#       uses: lhotari/action-upterm@v1
+      uses: lhotari/action-upterm@v1
