--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -48,5 +48,5 @@ jobs:
         
     - name: Setup upterm session
 #      if: always()
-#       if: failure()
+      if: failure()
       uses: lhotari/action-upterm@v1
