--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,6 +22,8 @@ jobs:
   build:
     runs-on: ubuntu-20.04
     steps:
+    - name: install numpy
+      run: pip3 install numpy
     - name: load qpSWIFT
       id: load-qpSWIFT
       uses: actions/cache@v3
