--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -60,7 +60,7 @@ jobs:
       run: |
         pip3 freeze | grep qpSWIFT
         
-#     - name: Setup upterm session
-#       if: always()
+    - name: Setup upterm session
+      if: always()
 #       if: failure()
-#       uses: lhotari/action-upterm@v1
+      uses: lhotari/action-upterm@v1
