--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,6 +25,8 @@ jobs:
         qp_solver: [qpalm, qpSWIFT]
     runs-on: ubuntu-20.04
     steps:
+    - name: export qp solver
+      run: export QP_Solver=${{ matrix.qp_solver }}
     - name: install numpy
       run: pip3 install numpy
     - name: load qpSWIFT
