--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,7 +32,7 @@ jobs:
         with:
           python-version: '3.8.10'
           cache: 'pip' # caching pip dependencies
-      - run: pip install -r dependencies.txt        
+      - run: pip install -r requirements.txt        
       - name: Setup upterm session
         if: always()
 # #       if: failure()
