--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,7 +33,7 @@ jobs:
           python-version: '3.8.10'
           cache: 'pip' # caching pip dependencies
       - run: pip install -r requirements.txt        
-      - name: Setup upterm session
-        if: always()
+#       - name: Setup upterm session
+#         if: always()
 # #       if: failure()
-        uses: lhotari/action-upterm@v1
+#         uses: lhotari/action-upterm@v1
