--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,7 +30,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
         with:
-          python-version: '3.8.10'
+          python-version: '3.8 - 3.9'
           cache: 'pip' # caching pip dependencies
       - run: pip install -r requirements.txt        
 #       - name: Setup upterm session
