--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,7 +22,7 @@ jobs:
   build:
     strategy:
       matrix:
-        qp_solver: [qpalm, qpSWIFT]
+        qp_solver: [qpalm]
     env:
       QP_SOLVER: ${{ matrix.qp_solver }}
     runs-on: ubuntu-20.04
@@ -30,7 +30,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
         with:
-          python-version: '3.8 - 3.9'
+          python-version: '3.8'
           cache: 'pip' # caching pip dependencies
       - run: pip install -r requirements.txt        
 #       - name: Setup upterm session
