--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,11 +20,6 @@ on:
         type: boolean
 jobs:
   build:
-    strategy:
-      matrix:
-        qp_solver: [qpalm]
-    env:
-      QP_SOLVER: ${{ matrix.qp_solver }}
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v3
@@ -33,7 +28,7 @@ jobs:
           python-version: '3.8'
           cache: 'pip' # caching pip dependencies
       - run: pip install -r requirements.txt        
-#       - name: Setup upterm session
-#         if: always()
+      - name: Setup upterm session
+        if: always()
 # #       if: failure()
-#         uses: lhotari/action-upterm@v1
+        uses: lhotari/action-upterm@v1
