--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,6 +29,6 @@ jobs:
 #           cache: 'pip' # caching pip dependencies
       - run: pip install -r requirements.txt        
       - name: Setup upterm session
-        if: ${{ runner.debug == 'true' }}
+        if: ${{ runner.debug == '1' }}
 # #       if: failure()
         uses: lhotari/action-upterm@v1
