--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,18 +22,27 @@ jobs:
   build:
     runs-on: ubuntu-20.04
     steps:
-      - uses: actions/checkout@v3
+      - name: install ros and rosdeps
+        uses: betwo/github-setup-catkin@master
+        env:
+          ACTIONS_ALLOW_UNSECURE_COMMANDS: true
+        with:
+          ros-version: noetic
+          build-tool: 'catkin_tools'
+          workspace: $GITHUB_WORKSPACE/ros_ws
+#       - uses: actions/checkout@v3
 #       - uses: actions/setup-python@v4
 #         with:
 #           python-version: '3.8'
 #           cache: 'pip' # caching pip dependencies
-      - run: pip install -r requirements.txt    
-      - name: Dump runner context
-        if: always()
-        env:
-          RUNNER_CONTEXT: ${{ toJson(runner) }}
-        run: echo "$RUNNER_CONTEXT"
+#       - run: pip install -r requirements.txt    
+#       - name: Dump runner context
+#         if: always()
+#         env:
+#           RUNNER_CONTEXT: ${{ toJson(runner) }}
+#         run: echo "$RUNNER_CONTEXT"
       - name: Setup upterm session
-        if: ${{ (always()) && (runner.debug == '1') }}
+#         if: ${{ (always()) && (runner.debug == '1') }}
+        if: always()
 # #       if: failure()
         uses: lhotari/action-upterm@v1
